force-app/main/default/objects/Demo_State_Change__e/Demo_State_Change__e.object-meta.xml
<CustomObject>
    <description>Control-plane Platform Event for Skywave Interactive. Published by trigger on Demo_Session__c.State__c change. Consumed by the Heroku WS relay (which fans out to phones) and by the monitor LWC.</description>
    <label>Demo State Change</label>
    <pluralLabel>Demo State Changes</pluralLabel>
</CustomObject>