force-app/main/default/objects/Demo_State_Change__e/fields/New_State__c.field-meta.xml
<CustomField>
    <fullName>New_State__c</fullName>
    <label>New State</label>
    <description>The new value of Demo_Session__c.State__c (idle, scan, survey, agent_book, profile, c360, agent_seat_fail, agent_seat_pass, race, slack, done). Nullable: when the event carries a Client_Action__c instead, New_State__c is left empty and the consumer routes on the action tag.</description>
    <type>Text</type>
    <length>32</length>
</CustomField>