force-app/main/default/objects/Demo_State_Change__e/fields/Target_Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_Session_Id__c</fullName>
    <label>Target Session Id</label>
    <description>Optional. If set, the WS relay only pushes to that one phone's session. If empty, the change broadcasts to all connected phones (the v1 default).</description>
    <type>Text</type>
    <length>64</length>
</CustomField>